Progressing slowly Making sure there's a GB general understanding of the emulator. More stuff to follow soon!

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,12 +1,21 @@
+@font-face{
+    font-family: 'gbretro';
+    src: url('../fonts/gbboot.ttf');
+}
+
 figure {
     display: inline-block;
     border: 1px dotted gray;
     margin: 20px; /* adjust as needed */
 }
+
 figure img {
     vertical-align: top;
 }
+
 figure figcaption {
+    font-family: 'gbretro', sans-serif;
+    font-size: 20pt;
     border: 1px dotted blue;
     text-align: center;
 }
