--- a/JsGB/styles/index.css
+++ b/JsGB/styles/index.css
@@ -5,12 +5,8 @@
 
 body {
   color: black;
-  background: url(back.gif) repeat top left;
+  background: url(../images/back.gif) repeat top left;
   font-family: Georgia, serif;
-}
-
-a#navlink {
-  display: none;
 }
 
 #wrapper {
@@ -52,7 +48,7 @@ h1 a {
 }
 
 #container {
-  background: url(body-920.jpg) repeat-y top left;
+  background: url(../images/body-920.jpg) repeat-y top left;
   width: 920px;
 }
 
@@ -146,9 +142,6 @@ a#rss {
   clear: both;
   margin-top: -50px;
 }
-
-#wrapper #foot { filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=crop,src='../img/foot.png'); }
-#wrapper > #foot { background: url(../img/foot.png) no-repeat top left; }
 
 #foot .inner {
   padding-top: 66px;
